# embedded-device-bootstrapping

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
bootstrap/common/: base-setup.sh  setup-tailscale.sh  tunnel-setup.sh
bootstrap/pi-zero-2w/: laptop-setup.sh
bootstrap/rpi5/: dnsmasq.conf  hostapd.conf.template  setup-filebrowser.sh  setup-hotspot.sh  setup-nas-mounts.sh  setup-nat.sh  setup-pihole.sh  setup-samba.sh  setup-uplink-monitor.sh
configs/: pi-zero-2w.env.template  rpi5.env.template
deploy/: deploy.sh
deploy/templates/: app.service.template  ship-computer-fallback  ship-computer-fallback.service  ship-computer-fallback.timer
docs/: backlog.md  hotspot-fix-jan2026.md  pi-reachability-journey.md  research-rpi5-sessions.md  rpi5-wifi-runbook.md
flash/: Dockerfile  README.md  flash-sd.sh
pibox-core/: Cargo.toml
pibox-core/src/: auth.rs  config.rs  filebrowser.rs  lib.rs  protocol.rs  state.rs
pibox-gui/: Cargo.toml
pibox-gui/src/: main.rs
pibox-server/: Cargo.toml
pibox-server/src/: handlers.rs  load.rs  main.rs  state.rs
pibox-tui/: Cargo.toml
pibox-tui/src/: app.rs  input.rs  main.rs  ui.rs
usb-multiboot/: README.md  grub.cfg  grubx64-patched.efi
