[workspace]
resolver = "2"
members = [
    "pibox-core",
    "pibox-server",
    "pibox-tui",
    "pibox-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Author"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/WebSocket
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GUI
iced = { version = "0.13", features = ["tokio"] }

# Config
dirs = "6"
toml = "0.8"
