[package]
name = "pibox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library: protocol, auth, state machine for pibox"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

# For timestamps
chrono = { version = "0.4", features = ["serde"] }

# For base64 encoding in protocol
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
