[package]
name = "pibox-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Graphical UI client for pibox (iced)"

[dependencies]
pibox-core = { path = "../pibox-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iced = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
