[package]
name = "pibox-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket orchestration server for embedded devices"

[dependencies]
pibox-core = { path = "../pibox-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

# System info for load monitoring
sysinfo = "0.33"

# WebSocket and async
futures = "0.3"
uuid = { version = "1.15", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
