[package]
name = "pibox-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI client for pibox (vim-style navigation)"

[dependencies]
pibox-core = { path = "../pibox-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

# Async channel for UI events
tokio-util = "0.7"
futures = "0.3"

# Logging to file
tracing-appender = "0.2"
